--- a/src/FamilyBundle/Resources/public/css/main.css
+++ b/src/FamilyBundle/Resources/public/css/main.css
@@ -6,15 +6,7 @@
 // 4. Responsive
 ---------------------*/
 
-/*body {*/
-/*display: flex;*/
-/*min-height: 100vh;*/
-/*flex-direction: column;*/
-/*}*/
 
-/*main {*/
-/*flex: 10 auto;*/
-/*}*/
 
 footer{
     font-size: 18px !important;
@@ -110,54 +102,54 @@ a:active {
 
 }
 
-#f1_container {
-    position: relative;
-    margin: 10px auto;
-    width: 450px;
-    height: 281px;
-    z-index: 1;
-}
-#f1_container {
-    perspective: 1000;
-}
-#f1_card {
-    width: 100%;
-    height: 100%;
-    transform-style: preserve-3d;
-    transition: all 1.0s linear;
-}
-#f1_container:hover #f1_card {
-    transform: rotateY(180deg);
-    box-shadow: -5px 5px 5px #aaa;
-}
-.face {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    backface-visibility: hidden;
-}
-.face.back {
-    display: block;
-    transform: rotateY(180deg);
-    box-sizing: border-box;
-    padding: 10px;
-    color: white;
-    text-align: center;
-    background-color: #aaa;
-}
+/*#f1_container {*/
+    /*position: relative;*/
+    /*margin: 10px auto;*/
+    /*width: 450px;*/
+    /*height: 281px;*/
+    /*z-index: 1;*/
+/*}*/
+/*#f1_container {*/
+    /*perspective: 1000;*/
+/*}*/
+/*#f1_card {*/
+    /*width: 100%;*/
+    /*height: 100%;*/
+    /*transform-style: preserve-3d;*/
+    /*transition: all 1.0s linear;*/
+/*}*/
+/*#f1_container:hover #f1_card {*/
+    /*transform: rotateY(180deg);*/
+    /*box-shadow: -5px 5px 5px #aaa;*/
+/*}*/
+/*.face {*/
+    /*position: absolute;*/
+    /*width: 100%;*/
+    /*height: 100%;*/
+    /*backface-visibility: hidden;*/
+/*}*/
+/*.face.back {*/
+    /*display: block;*/
+    /*transform: rotateY(180deg);*/
+    /*box-sizing: border-box;*/
+    /*padding: 10px;*/
+    /*color: white;*/
+    /*text-align: center;*/
+    /*background-color: #aaa;*/
+/*}*/
 
-.wall {
+/*.wall {*/
     /*background-image: url("../images/userl.png") !important;*/
 
 
 }
 
-.form {
-    margin: 40px auto;
-    padding: 10px 30px 35px;
-    display: block;
-    width: 75%;
-    background-color: #DEDCDC;
-    box-shadow: 0 0 25px 0 #000;
-}
+/*.form {*/
+    /*margin: 40px auto;*/
+    /*padding: 10px 30px 35px;*/
+    /*display: block;*/
+    /*width: 75%;*/
+    /*background-color: #DEDCDC;*/
+    /*box-shadow: 0 0 25px 0 #000;*/
+/*}*/
 
