--- a/src/FamilyBundle/Resources/public/css/main.css
+++ b/src/FamilyBundle/Resources/public/css/main.css
@@ -12,7 +12,7 @@ footer{
     font-size: 18px !important;
     font-family: Verdana, Geneva, sans-serif;
     color: #333;
-    background-color: ;
+    /*background-color: ;*/
     height: 20px;
     line-height: 20px;
     vertical-align: middle;
