--- a/src/FamilyBundle/Resources/views/Security/login_content.html.twig
+++ b/src/FamilyBundle/Resources/views/Security/login_content.html.twig
@@ -5,44 +5,53 @@
         <div>{{ error.messageKey|trans(error.messageData, 'security') }}</div>
     {% endif %}
 
-<div class="container center-align">
-    <div class="row "><br>
-        <img class="brand-logo nav_bar_logo" src="{{ asset('bundles/family/images/family.png') }}" alt="logo">
-        <a href="{{ path('fos_user_registration_register') }}"><h5>1- Enregistrez vous en cliquant ici :</h5></a><br><br>
-        <h5>2- Connectez vous :</h5> <br><br>
+<div class="container">
+    <div class="row center-align"><br>
+
+        <img class=" brand-logo nav_bar_logo " src="{{ asset('bundles/family/images/family.png') }}" alt="logo">
+        <h5>1- Enregistrez vous ici :</h5>
+        <div class="row col s12 center-align"><a href="{{ path('fos_user_registration_register') }}" >
+            <input class="waves-effect waves-light btn green"  type="submit" id="_submit" name="_submit" value="{{ 'connexion'|trans }}" /></a>
+        </div>
+
+        <br>
+        <br>
+
+        <h5>2- Connectez vous :    </h5>
 
         <form class="form " action="{{ path("fos_user_security_check") }}" method="post">
             {% if csrf_token %}
                 <input type="hidden" name="_csrf_token" value="{{ csrf_token }}" />
             {% endif %}
 
-            <div class="row col S7 m6 l6">
+            <div class="row col s12">
 
                 <div class="input-field">
                     <i class="material-icons prefix">account_circle</i>
-                    <label for="username">{{ 'security.login.username'|trans }}</label>
-                    <input type="text" id="username" name="_username" value="{{ last_username }}" required="required" />
+                    <label for="username" >{{ 'security.login.username'|trans }}</label>
+                    <input type="text"  length="15" id="username" name="_username" value="{{ last_username }}" required="required" />
                 </div>
 
-            </div>
-            <div class="row col s7 m6 l6">
+            {#</div>#}
+            {#<div class="row col s12 m6 l6">#}
 
                 <div class="input-field">
                     <i class="material-icons prefix">lock</i>
                     <label for="password">{{ 'security.login.password'|trans }}</label>
-                    <input type="password" id="password" name="_password" required="required" />
+                    <input type="password" length="15" id="password" name="_password" required="required" />
                 </div>
 
             </div>
-            <div class="row col s7 m6 l6">
+            <div class="row col s12 center-align">
             <input type="checkbox" class="filled-in" id="filled-in-box" checked="checked"  />
             <label for="filled-in-box">{{ 'security.login.remember_me'|trans }}</label>
             </div>
-            <div class="row col s7 m6 l6">
-            <input class="waves-effect waves-light btn" type="submit" id="_submit" name="_submit" value="{{ 'security.login.submit'|trans }}" />
+            <div class="row col s12 center-align">
+            <input class="waves-effect waves-light btn blue" type="submit" id="_submit" name="_submit" value="{{ 'security.login.submit'|trans }}" />
             </div>
         </form>
 
     </div>
 </div>
+
 {% endblock %}
