--- a/src/FamilyBundle/Resources/public/css/main.css
+++ b/src/FamilyBundle/Resources/public/css/main.css
@@ -65,6 +65,23 @@ a:active {
     width: 100px;
     height: 100px;
 }
+/*.background-image {*/
+    /*margin:0;*/
+    /*padding: 0;*/
+
+    /*background: url() no-repeat center center fixed;*/
+    /*-webkit-background-size: cover;*/
+    /*-moz-background-size: cover;*/
+    /*-o-background-size: cover;*/
+    /*background-size: cover;*/
+    /*position: fixed;*/
+    /*top:0;*/
+    /*left:0;*/
+    /*z-index:-10;*/
+    /*height: 100%;*/
+    /*width: 100%;*/
+
+/*}*/
 
 
 /************************************
@@ -75,9 +92,10 @@ a:active {
 
 .nav_bar_logo, .nav_bar_burger{
     height: 100%;
+
 }
 .nav_bar_logo img, .nav_bar_burger img{
-    height:100%;
+    height: 100%;
 }
 
 /************************************
@@ -142,7 +160,7 @@ a:active {
     /*background-image: url("../images/userl.png") !important;*/
 
 
-}
+
 
 /*.form {*/
     /*margin: 40px auto;*/
@@ -152,4 +170,64 @@ a:active {
     /*background-color: #DEDCDC;*/
     /*box-shadow: 0 0 25px 0 #000;*/
 /*}*/
+/* label color */
 
+/*html{*/
+    /*color: #0080FF !important;*/
+/*}*/
+
+.input-field label {
+    color: #0080FF !important;
+}
+/* label focus color */
+.input-field input[type=text]:focus + label {
+    color: #0000FF !important;
+}
+/* label underline focus color */
+.input-field input[type=text]:focus {
+    border-bottom: 1px solid #000;
+    box-shadow: 0 1px 0 0 #000;
+}
+/* valid color */
+.input-field input[type=text].valid {
+    border-bottom: 1px solid #000;
+    box-shadow: 0 1px 0 0 #000;
+}
+/* invalid color */
+.input-field input[type=text].invalid {
+    border-bottom: 1px solid #000;
+    box-shadow: 0 1px 0 0 #000;
+}
+/* icon prefix focus color */
+.input-field .prefix.active {
+    color: #40FF00 !important;
+}
+
+.button {
+    display: inline-block;
+    position: relative;
+    width: 120px;
+    height: 32px;
+    line-height: 32px;
+    border-radius: 2px;
+    font-size: 0.9em;
+    background-color: #fff;
+    color: #646464;
+}
+
+.button.blue {
+    background-color: #0000FF !important;
+    color: #fff !important;
+}
+
+.button.green {
+    background-color: #01DF3A!important;
+    color: #fff!important;
+    
+}
+
+.button.raised {
+    transition: box-shadow 0.2s cubic-bezier(0.4, 0, 0.2, 1);
+    transition-delay: 0.2s;
+    box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.26);
+}
