--- a/src/FamilyBundle/Resources/views/Default/nav.html.twig
+++ b/src/FamilyBundle/Resources/views/Default/nav.html.twig
@@ -2,15 +2,35 @@
     <header>
 
         <nav class="white" role="navigation">
-            <div class="nav-wrapper container"><a href="{{ path('family_homepage') }}"><img class="brand-logo nav_bar_logo" src="{{ asset('bundles/family/images/family.png') }}" alt="logo"></a>
-                <ul class="right hide-on-med-and-down">
-                    <li><a href="{{ path('family_phone') }}" class="waves-effect waves-light btn">Phone</a></li>
-                    <li><a href="{{ path('family_calendar') }}" class="btn">Calendar</a></li>
-                    <li><a href="{{ path('family_time') }}" class="btn">Timer</a></li>
-                    <li><a href="{{ path('family_map') }}" class="btn">Map</a></li>
-                    <li><a href="{{ path('fos_user_profile_show') }}" class="btn">Profile</a></li>
-                    <li><a href="{{ path('fos_user_security_logout') }}" class="btn">Deconnection</a></li>
+            <div class="nav-wrapper container">
+                <!-- Active NavBar Mobile -->
+                <a href="#" data-activates="nav-mobile" class="button-collapse"><i class="material-icons prefix">menu</i></a>
+
+                <ul class="hide-on-med-and-down">
+                    <div class="center-align row">
+                        <li class="col s2">
+                            <a href="{{ path('family_homepage') }}"><img class="brand-logo nav_bar_logo" src="{{ asset('bundles/family/images/family.png') }}" alt="logo"></a>
+                            </li>
+                         <li class="col s2">
+                            <a href="{{ path('family_phone') }}"><img src="{{ asset('bundles/family/images/phone.png') }}" class="brand-logo nav_bar_logo" alt="phone"></a>
+                         </li>
+                        <li class="col s2">
+                            <a href="{{ path('family_calendar') }}"><img src="{{ asset('bundles/family/images/calendar.png') }}" class="brand-logo nav_bar_logo" alt="calendar"></a>
+                        </li>
+
+                        <li class="col s2">
+                            <a href="{{ path('family_time') }}"><img src="{{ asset('bundles/family/images/time.png') }}" class="brand-logo nav_bar_logo" alt="time"></a>
+                        </li>
+                        <li class="col s2">
+                            <a href="{{ path('family_map') }}"><img src="{{ asset('bundles/family/images/map.png') }}" class="brand-logo nav_bar_logo" alt="map"></a>
+                        </li>
+                    </div>
                 </ul>
+
+
+                    {#<li><a href="{{ path('fos_user_profile_show') }}" class="btn">Profile</a></li>#}
+                    {#<li><a href="{{ path('fos_user_security_logout') }}" class="btn">LogOff</a></li>#}
+
 
                 <ul id="nav-mobile" class="side-nav center">
                     <li><a href="">
@@ -23,7 +43,7 @@
                     <li><a href="{{ path('fos_user_security_logout') }}">Deconnection</a></li><br>
 
                 </ul>
-                <a href="#" data-activates="nav-mobile" class="button-collapse"><i class="material-icons">Menu</i></a>
+                <i class="material-icons">menu</i>
             </div>
         </nav>
 
