--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="UTF-8" />
-        <title>{% block title %}Family App Homepage{% endblock %}</title>
+        {#<title>{% block title %}Family App Homepage{% endblock %}</title>#}
         <link rel="icon" type="image/x-icon" href="{{ asset('bundles/family/images/familyicon.ico') }}" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
@@ -12,43 +12,29 @@
         <!--Import materialize.css-->
         {#<link type="text/css" rel="stylesheet" href="{{ asset('bundles/family/css/fingerpaint.min.css') }}">#}
         <link type="text/css" rel="stylesheet" href="{{ asset('bundles/family/css/materialize.min.css') }}" media="screen,projection">
-        <link type="text/css" rel="stylesheet" href="{{ asset('bundles/family/css/fullcalendar.min.css') }}">
-
-         {% endblock %}
 
 
-
-
+         <link type="text/javascript" href="{{ asset('bundles/family/js/moment.min.js') }}">
+        <link type="text/javascript" href="{{ asset('bundles/family/js/fullcalendar.min.js') }}">
+	<link type="text/javascript" href="{{ asset('bundles/family/js/calendar_main.js') }} ">
+	         {% endblock %}
     </head>
     <body>
+    <title>{% block title %}{% endblock %}</title>
     {% block header %}{% endblock %}
     {% block body %}{% endblock %}
-
     {% block footer %}{% endblock %}
 
-        <!-- jQuery is required by Materialize to function -->
-        <script src="https://code.jquery.com/jquery-2.2.4.js"   integrity="sha256-iT6Q9iMJYuQiMWNd9lDyBUStIq/8PuOW33aOqmvFpqI=" crossorigin="anonymous"></script>
+    <!-- jQuery is required by Materialize to function -->
 
-        <!-- Compiled and minified JavaScript offline Materialize -->
-        <script type="text/javascript" src="{{ asset('bundles/family/js/materialize.min.js') }}"></script>
+
+    <script type="text/javascript" src="https://code.jquery.com/jquery-2.2.4.js"   integrity="sha256-iT6Q9iMJYuQiMWNd9lDyBUStIq/8PuOW33aOqmvFpqI=" crossorigin="anonymous"></script>
+    <!-- Compiled and minified JavaScript offline Materialize -->
+
+    <script type="text/javascript" src="{{ asset('bundles/family/js/materialize.min.js') }}"></script>
     {% block js %}
-
-        <script type="text/javascript" src="{{ asset('bundles/family/js/main.js') }}"></script>
-
+<script type="text/javascript" src="{{ asset('bundles/family/js/main.js') }}"></script>
     {% endblock %}
-
-
-    <div class="fixed-action-btn toolbar">
-        <a class="btn-floating btn-large red">
-            <i class="large material-icons">mode_edit</i>
-        </a>
-        <ul>
-            <li class="waves-effect waves-light"><a href="#!"><i class="material-icons">insert_chart</i></a></li>
-            <li class="waves-effect waves-light"><a href="#!"><i class="material-icons">format_quote</i></a></li>
-            <li class="waves-effect waves-light"><a href="#!"><i class="material-icons">publish</i></a></li>
-            <li class="waves-effect waves-light"><a href="#!"><i class="material-icons">attach_file</i></a></li>
-        </ul>
-    </div>
 
     </body>
 </html>
