--- a/src/FamilyBundle/Resources/views/Default/phone.html.twig
+++ b/src/FamilyBundle/Resources/views/Default/phone.html.twig
@@ -1,4 +1,5 @@
 {%extends 'base.html.twig'%}
+{% block title %}Phone Listings{% endblock %}
 {% block stylesheet%}
     <link type="text/css" rel="stylesheet" href="{{ asset('bundles/family/css/materialize.min.css') }}" media="screen,projection">
 
@@ -8,8 +9,9 @@
 
 
 {% block body %}
+
     {% include "@Family/Default/nav.html.twig"  %}
-    <h1>test 1 phone</h1>
+    <h1>Phone Listings :</h1>
 
     <table class="bordered highlight responsive-table centered">
         <thead>
