--- a/src/FamilyBundle/Resources/views/Default/time.html.twig
+++ b/src/FamilyBundle/Resources/views/Default/time.html.twig
@@ -1,4 +1,5 @@
 {%extends 'base.html.twig'%}
+{% block title %}Countdown Listings{% endblock %}
 {% block stylesheet%}
     <link type="text/css" rel="stylesheet" href="{{ asset('bundles/family/css/materialize.min.css') }}" media="screen,projection">
 
