--- a/src/FamilyBundle/Resources/views/Default/time.html.twig
+++ b/src/FamilyBundle/Resources/views/Default/time.html.twig
@@ -17,9 +17,9 @@
         <thead>
         <tr>
             <th data-field="id">Nom</th>
-            <th data-field="name">Prenon</th>
+            <th data-field="name">Prenom</th>
             <th data-field="price">Anniversaire</th>
-            <th data-field="price">Reste</th>
+            <th data-field="price">Reste nb de jrs</th>
 
         </tr>
         </thead>
