--- a/src/FamilyBundle/Resources/public/css/main.css
+++ b/src/FamilyBundle/Resources/public/css/main.css
@@ -5,7 +5,8 @@
 // 3. Nav
 // 4. Responsive
 ---------------------*/
-
+html, body { height: 100%; margin: 0; padding: 0; }
+#map { height: 25%; }
 
 
 footer{
