--- a/src/FamilyBundle/Resources/views/Default/index.html.twig
+++ b/src/FamilyBundle/Resources/views/Default/index.html.twig
@@ -13,8 +13,8 @@
 <!--Ajout du lien interne vers la NavBar-->
 {% include "@Family/Default/nav.html.twig"  %}
 
-<div class="join_view ng-scope"><br>
-    <h3 class="center-align">Family App :</h3><br><h3>4 Fonctions pour organiser sa famille.</h3><br>
+{#<div class="join_view ng-scope"><br>#}
+    <h3 class="center-align">Family App :</h3><br><h3 class="center-align">4 Fonctions pour organiser sa famille.</h3><br>
 
         {#<div class="container center-align"><br><br>#}
             {#<div class="row">#}
