--- a/src/FamilyBundle/Resources/views/Default/phone.html.twig
+++ b/src/FamilyBundle/Resources/views/Default/phone.html.twig
@@ -18,9 +18,9 @@
         <tr>
             <th data-field="id">Nom</th>
             <th data-field="name">Prenon</th>
-            <th data-field="price">Tel 03</th>
-            <th data-field="price">Tel 06</th>
-            <th data-field="price">Tel 09</th>
+            <th data-field="price">Tel Domicile</th>
+            <th data-field="price">Tel Portable</th>
+            <th data-field="price">Tel Internet</th>
         </tr>
         </thead>
 
