--- a/src/FamilyBundle/Resources/views/Profile/edit.html.twig
+++ b/src/FamilyBundle/Resources/views/Profile/edit.html.twig
@@ -1,4 +1,5 @@
 {% extends "base.html.twig" %}
+{% block title %}Edit Profile{% endblock %}
 {% block body %}
     <div class="container">
         {% block fos_user_content %}
