--- a/src/FamilyBundle/Resources/views/Profile/edit_content.html.twig
+++ b/src/FamilyBundle/Resources/views/Profile/edit_content.html.twig
@@ -74,9 +74,12 @@
     {#{{ form_widget(edit_form) }}#}
 <div class="col s5 m3 l3 center">
     <input class="waves-effect waves-light btn" type="submit" value="{{ 'profile.edit.submit'|trans }}" />
-</div><br>
+{#</div><br>#}
 {#{{ form_end(form) }}#}
-<div class="col s5 m3 l3 center">
+{#<div class="col s5 m3 l3 center">#}
     <a href="{{ path('fos_user_profile_show') }}" class="waves-effect waves-light btn">Retour au profile</a>
+{#</div><br>#}
+{#<div class="col s5 m3 l3 center">#}
+    <a href="{{ path('family_homepage') }}" class="waves-effect waves-light btn">Retour Homepage</a>
 </div>
 
