--- a/src/FamilyBundle/Resources/views/Profile/show_content.html.twig
+++ b/src/FamilyBundle/Resources/views/Profile/show_content.html.twig
@@ -15,16 +15,18 @@
 
     <p>{{ 'Nom' }}: {{ user.nom }}</p>
     <p>{{ 'Prenom' }}: {{ user.prenom }}</p>
-    <p>{{ 'Tel_03' }}: {{ user.tel03 }}</p>
-    <p>{{ 'Tel_06' }}: {{ user.tel06 }}</p>
-    <p>{{ 'Tel_09' }}: {{ user.tel09 }}</p>
+    <p>{{ 'Tel Domicile' }}: {{ user.tel03 }}</p>
+    <p>{{ 'Tel Portable' }}: {{ user.tel06 }}</p>
+    <p>{{ 'Tel Internet' }}: {{ user.tel09 }}</p>
     <p>{{ 'Adresse' }}: {{ user.adresse }}</p>
     <p>{{ 'Code Postal' }}: {{ user.codepostal }}</p>
     <p>{{ 'Ville' }}: {{ user.ville }}</p>
-    <p>{{ 'Anniversaire' }}: {{ user.anniversaire|date("m/d/Y") }}</p>
+    <p>{{ 'Anniversaire' }}: {{ user.anniversaire|date("d/m/Y") }}</p>
+
 
 </div>
-<a href="{{ path('fos_user_profile_edit') }}" class="waves-effect waves-light btn">Editer votre profile</a>
+<a href="{{ path('fos_user_profile_edit') }}" class="waves-effect waves-light btn">Editer votre profile</a><br><br>
+<a href="{{ path('family_homepage') }}" class="waves-effect waves-light btn">Retour homepage</a><br>
 </div>
 
 
