--- a/src/FamilyBundle/Resources/views/Registration/register_content.html.twig
+++ b/src/FamilyBundle/Resources/views/Registration/register_content.html.twig
@@ -67,65 +67,63 @@
         {{ form_widget(form.tel_09) }}
     </div>
 
-    <div class="row col s12 m4 l4 "><i class="material-icons prefix">today</i>
+    <div class="row col s12 m4 l4 input-field"><i class="material-icons prefix">today</i>
+        {#<input type="date" class="datepicker">#}
         {{ form_label(form.anniversaire) }}
         {{ form_errors(form.anniversaire) }}
         {{ form_widget(form.anniversaire) }}
     </div>
 
-    <div class="row col s12 m4 l4"><i class="material-icons prefix">today</i>Anniversaire
-        <input type="date" class="datepicker">
-    </div>
+    {#<div class="row col s12 m4 l4"><i class="material-icons prefix">today</i>Anniversaire#}
+        {#<input type="date" class="datepicker">#}
+    {#</div>#}
 
-    <div class="input-field col s12">
-        <select>
-            <option value="" disabled selected>Menu</option>
-            <option value="1">Accueil</option>
-            <option value="2">Profil</option>
-            <option value="3">Deconection</option>
-        </select>
-        </label>
-    </div>
-    <div class="input-field col s12">
-        <select>
-            <option value="" disabled selected>Choose your option</option>
-            <option value="1">Option 1</option>
-            <option value="2">Option 2</option>
-            <option value="3">Option 3</option>
-        </select>
-        <label>Materialize Select</label>
-    </div>
-<br>
-    <!-- Switch -->
-    <div class="switch">
-        <label>
-            Login
-            <input type="checkbox">
-            <span class="lever"></span>
-            Logoff :
-        </label>
-    </div>
+    {#<div class="input-field col s12">#}
+        {#<select>#}
+            {#<option value="" disabled selected>Menu</option>#}
+            {#<option value="1">Accueil</option>#}
+            {#<option value="2">Profil</option>#}
+            {#<option value="3">Deconection</option>#}
+        {#</select>#}
+        {#</label>#}
+    {#</div>#}
+    {#<div class="input-field col s12">#}
+        {#<select>#}
+            {#<option value="" disabled selected>Choose your option</option>#}
+            {#<option value="1">Option 1</option>#}
+            {#<option value="2">Option 2</option>#}
+            {#<option value="3">Option 3</option>#}
+        {#</select>#}
+        {#<label>Materialize Select</label>#}
+    {#</div>#}
+{#<br>#}
+    {#<!-- Switch -->#}
+    {#<div class="switch">#}
+        {#<label>#}
+            {#Login#}
+            {#<input type="checkbox">#}
+            {#<span class="lever"></span>#}
+            {#Logoff :#}
+        {#</label>#}
+    {#</div>#}
 
 </div></div>
 
-<form action="#">
-    <div class="file-field input-field">
-        <div class="btn">
-            <span>File</span>
-            <input type="file" multiple>
-        </div>
-        <div class="file-path-wrapper">
-            <input class="file-path validate" type="text" placeholder="Choix d'une image de profile">
-        </div>
-    </div>
-</form>
+{#<form action="#">#}
+    {#<div class="file-field input-field">#}
+        {#<div class="btn">#}
+            {#<span>File</span>#}
+            {#<input type="file" multiple>#}
+        {#</div>#}
+        {#<div class="file-path-wrapper">#}
+            {#<input class="file-path validate" type="text" placeholder="Choix d'une image de profile">#}
+        {#</div>#}
+    {#</div>#}
+{#</form>#}
 
         {{ form_widget(form) }}
 <div class="row center-align">
         <input class="waves-effect waves-light btn" type="submit" value="{{ 'registration.submit'|trans }}" />
 </div>
         {{ form_end(form) }}
-
-{#{% block js %}{% endblock %}#}
-
 
